--- a/service.html
+++ b/service.html
@@ -150,7 +150,7 @@
       <section class="visual">
         <div class="visual-text">
           <h2>고객지원</h2>
-          <p>제작문의 및 상담을 통해 도움을 받으세요</p>
+          <p>고객 지원은 제작문의 및 상담을 통해 고객에게 도움을 드립니다.</p>
         </div>
         <figure><img src="./img/visual-5-1.jpg" alt="#" /></figure>
       </section>
