--- a/shorts.html
+++ b/shorts.html
@@ -256,7 +256,7 @@
         </div>
       </section>
 
-      <section class="service">
+      <section class="service shorts-sev">
         <div class="inner">
           <div class="sev-con">
             <dl>
@@ -264,12 +264,14 @@
               <dd>창공연구소</dd>
             </dl>
 
-            <a href="https://cglab.channel.io/home" class="service-btn"
-              >결제창 <br />바로가기</a
-            >
-            <a href="https://cglab.channel.io/home" class="service-btn"
-              >창공 멤버십</a
-            >
+            <div class="sev-btn">
+              <a href="https://cglab.channel.io/home" class="service-btn"
+                >결제창 바로가기</a
+              >
+              <a href="https://cglab.channel.io/home" class="service-btn"
+                >창공 멤버십</a
+              >
+            </div>
           </div>
         </div>
       </section>
