--- a/youtube.html
+++ b/youtube.html
@@ -200,13 +200,13 @@
             <div class="swiper phone-con">
               <div class="swiper-wrapper phone-img">
                 <div class="swiper-slide">
-                  <figure><img src="./img/phon-1.png" alt="#" /></figure>
+                  <figure><img src="./img/phon-1.jpg" alt="#" /></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/phon-2.png" alt="#" /></figure>
+                  <figure><img src="./img/phon-2.jpg" alt="#" /></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/phon-3.png" alt="#" /></figure>
+                  <figure><img src="./img/phon-3.jpg" alt="#" /></figure>
                 </div>
                 <div class="phone-pagination swiper-pagination"></div>
               </div>
