--- a/design.html
+++ b/design.html
@@ -163,7 +163,7 @@
           <ul class="about-con">
             <li>
               <dl class="about-text">
-                <dt>실제 전문가 그룹</dt>
+                <dt>웹사이트</dt>
                 <dd>
                   창공연구소의 강사님들은 실제 오픈마켓, 쇼핑몰 등을
                   <br />운영하는 전문가들로 이루어져 있습니다. <br />창업 성공을
@@ -176,7 +176,7 @@
             </li>
             <li>
               <dl class="about-text">
-                <dt>체계적인 커리큘럼 및 전자 자격증 획득까지</dt>
+                <dt>상세페이지</dt>
                 <dd>
                   사진촬영, 마케팅 리텐션까지 <br />여기저기 다닐 필요없이
                   체계적으로 시작할 수 있습니다.<br />
@@ -189,7 +189,7 @@
             </li>
             <li>
               <dl class="about-text">
-                <dt>신뢰와 믿음으로 시작</dt>
+                <dt>다양한 자사몰 또는 쇼핑몰</dt>
                 <dd>
                   창공연구소의 모든 강의는 과장 하지 않는 <br />100% REAL 강의
                   입니다.<br />
