--- a/shorts.html
+++ b/shorts.html
@@ -157,8 +157,8 @@
         <figure><img src="./img/visual-3-1.jpg" alt="#" /></figure>
       </section>
 
-      <section class="keyword">
-        <h3>수업내용</h3>
+      <section class="keyword shorts-keyword">
+        <h3>교육 개요</h3>
         <div class="inner">
           <div class="keyword-wrapper">
             <div class="swiper keyword-swiper">
@@ -167,61 +167,37 @@
                 <div class="swiper-slide">
                   <figure><img src="./img/keyword-1.svg" alt="#" /></figure>
                   <dl>
-                    <dt>카페24, 스마트스토어, 메타버스, 빅데이터분석</dt>
+                    <dt>유튜브 개설</dt>
                     <dd>
-                      2004년부터 현재까지 모든 온라인 쇼핑몰 채널에 대한
-                      솔루션을 제공합니다. 카페24와 스마트스토어에 최적화된
-                      솔루션을 제공합니다. 2014년 우수멘토상, 2015년 서울시
-                      이커머스 컨설턴트, 2016년 이커머스 최고멘토상, 2017년
-                      이커머스 최고멘토상의 경력 등 국내외 인정받은 마케팅
-                      노하우를 이제는 고객님에게 고스란히 전달해 드리겠습니다.
+                      유튜브 개설 부터 콘텐츠에 대한 기획, 영상, 업로드까지
+                      다룹니다.
                     </dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
                   <figure><img src="./img/curriculum-3.svg" alt="#" /></figure>
                   <dl>
-                    <dt>온라인 마케팅</dt>
+                    <dt>빅데이터</dt>
                     <dd>
-                      CJ E&M, 현대백화점 그룹, 경기콘텐츠진흥원,
-                      (사)인천벤처기업협회 등 현재 유수의 기업들에게 이커머스
-                      마케팅 교육을 하고 있으며, 자체 개발한 빅데이터 분석기와
-                      DATA LAB 분석과 함께 디지털 마케팅에 최적화된 기술력을
-                      보유하고 있습니다. 또한 네이버 블로그, FACEBOOK에 최적화된
-                      마케팅 전략을 가지고 있습니다.
+                      빅데이터를 기반으로 콘텐츠 트랜드, 이커머스 트랜드를
+                      분석합니다.
                     </dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
                   <figure><img src="./img/curriculum-8.svg" alt="#" /></figure>
                   <dl>
-                    <dt>브랜딩, 성공사례</dt>
-                    <dd>
-                      브랜딩화가 어렵다고 합니다. 내 수익을 100배 올려주는
-                      브랜드 매니지먼트 전략을 알려드립니다. 최근의 여러 성공
-                      사례를 고객에게 진심을 언어 수 있는 브랜드까지 소통을 통한
-                      방향성도 알려드립니다. 방향성만 맞다면 실패하지 않을 수
-                      있습니다.
-                    </dd>
+                    <dt>콘텐츠</dt>
+                    <dd>콘텐츠 소비가 활발한 쇼츠, 롱폼 영상을 제작합니다.</dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
                   <figure><img src="./img/curriculum-6.svg" alt="#" /></figure>
                   <dl>
-                    <dt>모바일 최적화 쇼핑몰</dt>
+                    <dt>쇼핑핑</dt>
                     <dd>
-                      모바일 온리 시대! O2O(Online to Offline)와 모바일 솔루션!
-                      동영상 마케팅 등 최적화된 쇼핑몰을 만들어드립니다.
-                    </dd>
-                  </dl>
-                </div>
-                <div class="swiper-slide">
-                  <figure><img src="./img/curriculum-11.svg" alt="#" /></figure>
-                  <dl>
-                    <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
-                    <dd>
-                      마케팅보다 브랜드보다 운영이 중요하다. 실제 노하우를
-                      바탕으로 알려주는 내 쇼핑몰 운영 노하우 전략!
+                      유튜브 쇼핑을 통해 콘텐츠x이커머스 시강에 선점을 할 수
+                      있도록 도움을 드립니다.
                     </dd>
                   </dl>
                 </div>
